--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,9 @@ body {
   background-color: #010e2c;
   color: #fff;
   font-family: 'Do Hyeon', sans-serif;
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
